compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__multiple_returns_same_function.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "\npub fn main(x: Int) -> Int {\n  case x {\n    1 -> $return 10\n    2 -> $return 20\n    3 -> $return 30\n    _ -> 40\n  }\n}"
---
----- SOURCE CODE

pub fn main(x: Int) -> Int {
  case x {
    1 -> $return 10
    2 -> $return 20
    3 -> $return 30
    _ -> 40
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(integer()) -> integer().
main(X) ->
    case X of
        1 ->
            10;

        2 ->
            20;

        3 ->
            30;

        _ ->
            40
    end.
