compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_expression_conditional.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "pub fn test_conditional_return(x: Int) -> Int {\n  case x > 0 {\n    True -> $return x * 2\n    False -> x + 1\n  }\n}"
---
----- SOURCE CODE
pub fn test_conditional_return(x: Int) -> Int {
  case x > 0 {
    True -> $return x * 2
    False -> x + 1
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([test_conditional_return/1]).

-file("project/test/my/mod.gleam", 1).
-spec test_conditional_return(integer()) -> integer().
test_conditional_return(X) ->
    case X > 0 of
    true ->
        X * 2;

    false ->
        X + 1
end.
