compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_expression_no_return.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "pub fn test_no_return(x: Int) -> Int { x + 1 }"
---
----- SOURCE CODE
pub fn test_no_return(x: Int) -> Int { x + 1 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([test_no_return/1]).

-file("project/test/my/mod.gleam", 1).
-spec test_no_return(integer()) -> integer().
test_no_return(X) ->
    X + 1.
