compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__return_expr__return_expression_simple.snap
---
source: compiler-core/src/erlang/tests/return_expr.rs
expression: "pub fn test_return() -> Int { $return 42 }"
---
----- SOURCE CODE
pub fn test_return() -> Int { $return 42 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([test_return/0]).

-file("project/test/my/mod.gleam", 1).
-spec test_return() -> integer().
test_return() ->
    42.
